kubernetes/postgres-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: jwebgames
      service: postgres
  template:
    metadata:
      labels:
        app: jwebgames
        service: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:alpine
          ports:
            - name: postgres-port
              containerPort: 5432
          resources:
            limits:
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: postgres-port
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: postgres-port
            initialDelaySeconds: 10
