kubernetes/redis-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: jwebgames
      service: redis
  template:
    metadata:
      labels:
        app: jwebgames
        service: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - name: redis-port
              containerPort: 6379
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: redis-port
            initialDelaySeconds: 5
          readinessProbe:
            tcpSocket:
              port: redis-port
            initialDelaySeconds: 5
