kubernetes/webapi-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: webapi
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: jwebgames
      service: webapi
  template:
    metadata:
      labels:
        app: jwebgames
        service: webapi
    spec:
      containers:
        - name: webapi
          image: gcr.io/perso-206820/jwebgames-webapi:v1
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 3000
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /status
              port: http-port
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /status
              port: http-port
            initialDelaySeconds: 10
