kubernetes/messager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messager
  labels:
    app: jwebgames
spec:
  type: ClusterIP
  selector:
    app: jwebgames
    service: messager
  ports:
    - name: pull-port
      port: 22549
      targetPort: pull-port
    - name: pub-port
      port: 22550
      targetPort: pub-port
