kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: jwebgames
spec:
  type: ClusterIP
  selector:
    app: jwebgames
    service: postgres
  ports:
    - name: postgres-port
      port: 5432
      targetPort: postgres-port
