kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: jwebgames
spec:
  type: ClusterIP
  selector:
    app: jwebgames
    service: redis
  ports:
    - name: redis-port
      port: 6379
      targetPort: redis-port
