kubernetes/webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi
  labels:
    app: jwebgames
spec:
  type: LoadBalancer
  selector:
    app: jwebgames
    service: webapi
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
