kubernetes/webapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapi
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: webapi
              servicePort: 80
